--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "GPL-3.0-or-later",
   "repository": "@elrondnetwork/multisig",
   "dependencies": {
-    "@elrondnetwork/dapp-core": "0.6.3",
+    "@elrondnetwork/dapp-core": "^1.0.12",
+    "@elrondnetwork/dapp-core-internal": "^0.0.6",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
@@ -89,7 +90,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "4.2.0",
     "prettier": "2.3.2"
   }
