--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0-or-later",
   "repository": "@elrondnetwork/multisig",
   "dependencies": {
-    "@elrondnetwork/dapp-core": "^1.0.12",
+    "@elrondnetwork/dapp-core": "1.0.12",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
