--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@elrondnetwork/dapp-core": "1.0.12",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "1.6.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
