--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "1.6.1",
     "axios": "0.21.1",
