build: removed extra line

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -23,8 +23,7 @@ jobs:
         if: success()
 
       - name: Create .env
-        run: |
-          .env.staging > .env
+        run: .env.staging > .env
 
       - name: Deploy
         id: Deploy
