--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.6.0",
-    "@mui/styles": "^5.6.1",
-    "@mui/x-data-grid": "^5.8.0",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.0",
+    "@mui/styles": "^5.6.1",
+    "@mui/x-data-grid": "^5.8.0",
     "@reduxjs/toolkit": "1.6.1",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
     "clsx": "1.1.1",
+    "dayjs": "^1.11.1",
     "formik": "2.2.9",
     "i18next": "20.4.0",
     "keccak": "3.0.2",
