--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Create .env
         run: cat .env.staging > .env
 
-      - name: Creat config.ts
-      - run: cp ./src/config.testnet.ts ./src/config.ts
+      - name: Create config.ts
+        run: cp ./src/config.testnet.ts ./src/config.ts
 
       - name: Deploy
         id: Deploy
