build: fixed mount paths

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
         volumes:
             - ./:/var/www:rw
             - node_modules:/var/www/node_modules
-            - ./.docker/logs/nginx/:/var/log/nginx
+            - ./.docker/logs/nginx:/var/log/nginx
             # add server files correctly
-            - ./.docker/nginx/conf.d/default:/etc/nginx/sites-enabled/
+            - ./.docker/nginx/conf.d:/etc/nginx/sites-enabled
         networks:
             - servers
             - proxy
