--- a/.env.staging
+++ b/.env.staging
@@ -5,6 +5,9 @@ DOCKER_BUILDKIT=1
 DOCKER_HOSTNAME=multisig.graffino.live
 DOCKER_DOMAIN=*.graffino.live
 
+# Multisig
+
+
 # NGINX
 DOCKER_NGINX_PORT=80
 DOCKER_NGINX_EXPOSED_PORT=8082
