--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -33,6 +33,7 @@ jobs:
           cat /dev/null > src/multisigConfig.ts
           echo "export const uniqueContractName = '${{ secrets.UNIQUE_CONTRACT_NAME }}';" >> src/multisigConfig.ts
           echo "export const uniqueContractAddress = '${{ secrets.UNIQUE_CONTRACT_ADDRESS }}';" >> src/multisigConfig.ts
+          echo "" > src/multisigConfig.ts
 
       - name: Deploy
         id: Deploy
