--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -10,14 +10,9 @@ RUN apt-get install -y libudev-dev libusb-1.0
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
-# install app dependencies
+# Copy app dependencies
 COPY package.json ./
 COPY package-lock.json ./
-RUN npm install
 
 # add app
 COPY . ./
-
-# start app
-CMD ["npm", "start"]    
-
