--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,9 +1,8 @@
 version: '3.7'
 
 services:
-
-  multisig:
-    container_name: multisig
+  multisig_dev:
+    container_name: multisig_dev
     build:
       context: .
       dockerfile: .docker/node/Dockerfile
@@ -13,6 +12,5 @@ services:
     ports:
       - 3001:3000
     environment:
-      - CHOKIDAR_USEPOLLING=true  
-    stdin_open: true   
-
+      - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
