--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "@elrondnetwork/multisig",
   "dependencies": {
     "@elrondnetwork/dapp-core": "1.0.12",
+    "@elrondnetwork/dapp-core-internal": "^0.1.11",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
     "@emotion/react": "^11.9.0",
@@ -51,7 +52,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fix": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
