--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -29,7 +29,11 @@ jobs:
 
       - name: Config setup
         run: |
+          echo '${{ secrets.NPMRC }}' >> .npmrc
           cp ./src/config.testnet.ts ./src/config.ts
+          cat /dev/null > src/multisigExtrasConfig.ts
+          echo "export const storageApi = '${{ secrets.EXTRAS_API_DEVNET}}';" >> ./src/multisigExtrasConfig.ts
+          echo "export const maiarIdApi = '${{ secrets.MAIAR_ID_API_DEVNET}}';" >> ./src/multisigExtrasConfig.ts
           cat /dev/null > src/multisigConfig.ts
           echo "export const uniqueContractName = '${{ secrets.UNIQUE_CONTRACT_NAME }}';" >> src/multisigConfig.ts
           echo "export const uniqueContractAddress = '${{ secrets.UNIQUE_CONTRACT_ADDRESS }}';" >> src/multisigConfig.ts
