--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-select": "4.3.1",
     "redux-persist": "6.0.0",
     "reselect": "4.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "4.1.2",
     "update": "0.7.4",
     "web-vitals": "1.0.1",
