--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styles": "^5.6.1",
     "@mui/x-data-grid": "^5.8.0",
     "@reduxjs/toolkit": "1.6.1",
+    "@types/styled-components": "^5.1.25",
     "axios": "0.21.1",
     "bootstrap": "4.6.0",
     "clsx": "1.1.1",
