--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "1.1.1",
     "dayjs": "^1.11.1",
     "formik": "2.2.9",
+    "g": "^2.0.1",
     "i18next": "20.4.0",
     "keccak": "3.0.2",
     "moment": "2.29.1",
@@ -81,14 +82,15 @@
     "@types/keccak": "3.0.1",
     "@types/node": "12.0.0",
     "@types/qrcode.react": "1.0.2",
-    "@types/react": "17.0.7",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "5.3.3",
     "@types/react-select": "4.0.17",
     "@types/redux-persist": "4.3.1",
     "@typescript-eslint/eslint-plugin": "4.22.1",
     "@typescript-eslint/parser": "4.22.1",
     "eslint": "7.25.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-react": "1.1.7",
     "eslint-config-react-app": "6.0.0",
@@ -101,6 +103,6 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.3.2"
+    "prettier": "^2.6.2"
   }
 }
