--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "17.0.2",
     "react-bootstrap": "1.6.0",
     "react-circular-progressbar": "2.0.4",
+    "react-csv": "^2.2.2",
     "react-dom": "17.0.2",
     "react-i18next": "11.11.4",
     "react-inlinesvg": "2.3.0",
@@ -85,6 +86,7 @@
     "@types/node": "12.0.0",
     "@types/qrcode.react": "1.0.2",
     "@types/react": "^18.0.10",
+    "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^18.0.5",
     "@types/react-router-dom": "5.3.3",
     "@types/react-select": "4.0.17",
