--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap": "1.6.0",
     "react-circular-progressbar": "2.0.4",
     "react-csv": "^2.2.2",
+    "react-csv-importer": "^0.7.1",
     "react-dom": "17.0.2",
     "react-i18next": "11.11.4",
     "react-inlinesvg": "2.3.0",
