--- a/.eslintrc
+++ b/.eslintrc
@@ -91,6 +91,9 @@
     "no-shadow": "off",
     "@typescript-eslint/no-shadow": ["warn"],
     "react/no-array-index-key": "off",
-    "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "[_]+" }]
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "varsIgnorePattern": "[_]+" }
+    ]
   }
 }
