--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,4 @@
 {
-  "arrowParens": "always",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": true,
-  "semi": true,
-  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "none"
+  "useTabs": false
 }
