--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "GPL-3.0-or-later",
   "repository": "@elrondnetwork/multisig",
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@elrondnetwork/dapp-core": "1.0.12",
     "@elrondnetwork/dapp-core-internal": "^0.1.11",
     "@elrondnetwork/dapp-utils": "0.1.3",
@@ -26,6 +27,7 @@
     "bootstrap": "4.6.0",
     "clsx": "1.1.1",
     "dayjs": "^1.11.1",
+    "eslint-import-resolver-alias": "^1.1.2",
     "formik": "2.2.9",
     "g": "^2.0.1",
     "i18next": "20.4.0",
@@ -34,6 +36,7 @@
     "lodash": "^4.17.21",
     "moment": "2.29.1",
     "node-sass": "6.0.1",
+    "npm-force-resolutions": "0.0.10",
     "qrcode.react": "1.0.1",
     "react": "17.0.2",
     "react-bootstrap": "1.6.0",
@@ -50,18 +53,23 @@
     "redux-persist": "6.0.0",
     "reselect": "4.0.0",
     "styled-components": "^5.3.5",
-    "typescript": "4.1.2",
+    "typescript": "^4.7.2",
     "update": "0.7.4",
     "web-vitals": "1.0.1",
     "yup": "0.32.9"
   },
+  "cracoConfig": "craco.config.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "lint": "eslint src -c .eslintrc.js --ext tsx,ts",
     "fix": "eslint src -c .eslintrc.js --ext tsx,ts --fix"
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
@@ -95,22 +103,9 @@
     "@types/react-router-dom": "5.3.3",
     "@types/react-select": "4.0.17",
     "@types/redux-persist": "4.3.1",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1",
-    "eslint": "7.25.0",
+    "prettier": "^2.6.2",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-react": "1.1.7",
-    "eslint-config-react-app": "6.0.0",
-    "eslint-config-standard": "16.0.2",
-    "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "^7.29.2",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "^2.6.2"
+    "file-loader": "^6.2.0",
+    "react-error-overlay": "6.0.9"
   }
 }
