--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@elrondnetwork/erdjs": "9.0.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
@@ -24,6 +25,7 @@
     "@reduxjs/toolkit": "1.6.1",
     "@types/styled-components": "^5.1.25",
     "axios": "0.21.1",
+    "bignumber.js": "^9.0.2",
     "bootstrap": "4.6.0",
     "clsx": "1.1.1",
     "dayjs": "^1.11.1",
