--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "4.3.1",
+    "redux": "^4.2.0",
     "redux-persist": "6.0.0",
     "reselect": "4.0.0",
     "styled-components": "^5.3.5",
