--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.1",
+    "@mui/system": "^5.8.4",
     "@mui/x-data-grid": "^5.8.0",
     "@reduxjs/toolkit": "1.6.1",
     "@types/styled-components": "^5.1.25",
