--- a/.env.staging
+++ b/.env.staging
@@ -16,6 +16,9 @@ NPMRC=//registry.npmjs.org/:_authToken=XXX_NPM_AUTH_TOKEN_XXX
 DOCKER_NGINX_PORT=80
 DOCKER_NGINX_EXPOSED_PORT=8082
 
+# CREATE REACT APP CONFIG
+GENERATE_SOURCEMAP=false
+
 # TRAEFIK
 TRAEFIK_DOMAIN=${DOCKER_DOMAIN}
 TRAEFIK_HOSTNAME=${DOCKER_HOSTNAME}
