fix: disable linter on build

--- a/.env.staging
+++ b/.env.staging
@@ -18,6 +18,7 @@ DOCKER_NGINX_EXPOSED_PORT=8082
 
 # CREATE REACT APP CONFIG
 GENERATE_SOURCEMAP=false
+DISABLE_ESLINT_PLUGIN=true #CREATE REACT APP RUNS LINTER ON BUILD
 
 # TRAEFIK
 TRAEFIK_DOMAIN=${DOCKER_DOMAIN}
