--- a/.env.staging
+++ b/.env.staging
@@ -18,7 +18,8 @@ DOCKER_NGINX_EXPOSED_PORT=8082
 
 # CREATE REACT APP CONFIG
 GENERATE_SOURCEMAP=false
-DISABLE_ESLINT_PLUGIN=true #CREATE REACT APP RUNS LINTER ON BUILD
+#CREATE REACT APP RUNS LINTER ON BUILD
+DISABLE_ESLINT_PLUGIN=true
 
 # TRAEFIK
 TRAEFIK_DOMAIN=${DOCKER_DOMAIN}
