--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -75,6 +75,7 @@ jobs:
         run: |
           export NODE_OPTIONS="--max-old-space-size=2048"
           export CI=false
+          export DISABLE_ESLINT_PLUGIN=true
           yarn build
 
       - name: Deploy
