--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'feature/MultiSig-Staging-PRJ-6013'
+      - 'develop'
 
 jobs:
   deploy-staging:
