--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Config setup
         run: |
           make setup-wallet
+          cat .npmrc
 
       - uses: actions/cache@v2
         with:
