--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "lint": "eslint src -c .eslintrc.js --ext tsx,ts",
     "fix": "eslint src -c .eslintrc.js --ext tsx,ts --fix"
   },
-  "overrides": {
+  "resolutions": {
     "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
