--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "formik": "2.2.9",
     "g": "^2.0.1",
     "i18next": "20.4.0",
+    "jdenticon": "^3.1.1",
     "keccak": "3.0.2",
+    "lodash": "^4.17.21",
     "moment": "2.29.1",
     "node-sass": "6.0.1",
     "qrcode.react": "1.0.1",
