--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "node-sass": "6.0.1",
     "npm-force-resolutions": "0.0.10",
     "qrcode.react": "1.0.1",
-    "react": "^18.0.0",
+    "react": "^17.0.2",
     "react-bootstrap": "1.6.0",
     "react-circular-progressbar": "2.0.4",
     "react-csv": "^2.2.2",
     "react-csv-importer": "^0.7.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.2",
     "react-i18next": "11.11.4",
     "react-inlinesvg": "2.3.0",
     "react-query": "^3.39.1",
@@ -75,8 +75,7 @@
     "fix": "eslint src -c .eslintrc.js --ext tsx,ts --fix"
   },
   "resolutions": {
-    "react-error-overlay": "6.0.9",
-    "react-i18next": ">=11.16.4"
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
