--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}      
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       
       - uses:  actions/setup-node@v3
         with:
@@ -72,7 +72,7 @@ jobs:
           export NODE_OPTIONS="--max-old-space-size=2048"
           export CI=false
           export DISABLE_ESLINT_PLUGIN=true
-          npm run build
+          yarn build
 
       - name: Deploy
         id: Deploy
