test: adjust installation timeout

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -57,7 +57,7 @@ jobs:
       - name: YARN Install
         id: YARN-Install
         if: success()
-        run: yarn
+        run: yarn --network-timeout 500000
 
       # - name: Lint
       #   id: Lint
