--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@elrondnetwork/dapp-core-internal": "^0.1.14",
     "@elrondnetwork/dapp-utils": "0.1.3",
     "@elrondnetwork/erdjs": "9.0.3",
+    "@elrondnetwork/erdjs-network-providers": "^1.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
