feat(restartServer): restart server after rsync copy

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -96,8 +96,9 @@ jobs:
             ls
 
           POST_SCRIPT: |
-            cd ~/staging.control.validblocks.com
+            cd ~/staging.control.validblocks.com/server
             ls
+            yarn start
             echo "Stop at: " $(date -u)
 
       - name: DeployServer
