fix: CI workflow

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -96,9 +96,7 @@ jobs:
             ls
 
           POST_SCRIPT: |
-            cd ~/staging.control.validblocks.com/server
-            ls
-            yarn start
+            make restart-proxy
             echo "Stop at: " $(date -u)
 
       - name: DeployServer
