--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dayjs": "^1.11.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "formik": "2.2.9",
+    "framer-motion": "^4.1.17",
     "g": "^2.0.1",
     "i18next": "20.4.0",
     "jdenticon": "^3.1.1",
