fix after revert
This reverts commit 20a4a081a84e37490ab25dcddcc93379f142c0ab, reversing
changes made to c7073d8f150819aab1bca78214ba233f56066b64.

--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,10 @@
   "scripts": {
     "start": "node index.js"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0"
+  }
 }
