--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "11.11.4",
     "react-inlinesvg": "2.3.0",
+    "react-number-format": "^5.1.1",
     "react-query": "^3.39.1",
     "react-redux": "7.2.5",
     "react-router-dom": "6.2.1",
