--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -64,11 +64,11 @@ jobs:
         if: success()
         run: yarn --network-timeout 500000
 
-      # - name: Lint
-      #   id: Lint
-      #   if: success()
-      #   run: |
-      #     yarn lint
+      - name: Lint
+        id: Lint
+        if: success()
+        run: |
+          yarn lint
 
       - name: Build
         id: Build
