--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "repository": "@elrondnetwork/multisig",
   "dependencies": {
     "@craco/craco": "^6.4.3",
-    "@elrondnetwork/dapp-core": "1.0.12",
+    "@elrondnetwork/dapp-core": "2.0.0-alpha.10",
     "@elrondnetwork/dapp-core-internal": "^0.3.3",
     "@elrondnetwork/dapp-utils": "0.1.3",
-    "@elrondnetwork/erdjs": "9.0.3",
+    "@elrondnetwork/erdjs": "10.2.5",
     "@elrondnetwork/erdjs-network-providers": "^1.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
