--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@elrondnetwork/multisig",
-  "description": "Elrond Multisig",
+  "description": "xSafe",
   "version": "0.1.2",
   "author": "ElrondNetwork",
   "license": "GPL-3.0-or-later",
   "repository": "@elrondnetwork/multisig",
   "dependencies": {
     "@craco/craco": "^6.4.3",
-    "@elrondnetwork/dapp-core": "2.0.0-alpha.10",
+    "@elrondnetwork/dapp-core": "2.2.0",
     "@elrondnetwork/dapp-core-internal": "^0.3.3",
     "@elrondnetwork/dapp-utils": "0.1.3",
-    "@elrondnetwork/erdjs": "10.2.5",
-    "@elrondnetwork/erdjs-network-providers": "^1.0.0",
+    "@elrondnetwork/erdjs": "11.1.1",
+    "@elrondnetwork/erdjs-network-providers": "1.1.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -26,7 +26,7 @@
     "@mui/x-data-grid": "^5.8.0",
     "@reduxjs/toolkit": "1.6.1",
     "@types/styled-components": "^5.1.25",
-    "axios": "0.21.1",
+    "axios": "0.24.0",
     "bignumber.js": "^9.0.2",
     "bootstrap": "4.6.0",
     "clsx": "1.1.1",
@@ -43,18 +43,18 @@
     "node-sass": "6.0.1",
     "npm-force-resolutions": "0.0.10",
     "qrcode.react": "1.0.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "1.6.0",
+    "react": "18.2.0",
+    "react-bootstrap": "2.1.2",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.4.2",
     "react-circular-progressbar": "2.0.4",
     "react-csv": "^2.2.2",
     "react-csv-importer": "^0.7.1",
-    "react-dom": "^17.0.2",
     "react-i18next": "11.11.4",
     "react-inlinesvg": "2.3.0",
     "react-number-format": "^5.1.1",
     "react-query": "^3.39.1",
     "react-redux": "7.2.5",
-    "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
     "react-select": "4.3.1",
     "redux": "^4.2.0",
@@ -86,18 +86,11 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "@elrondnetwork/transaction-decoder": "^0.1.0",
     "@testing-library/jest-dom": "5.11.4",
