--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "file-loader": "^6.2.0",
     "prettier": "^2.6.2",
-    "react-error-overlay": "6.0.9"
+    "react-error-overlay": "6.0.9",
+    "sass": "^1.57.1"
   }
 }
