fix: establlish connection to root server through alias

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -77,7 +77,7 @@ jobs:
         uses: up9cloud/action-rsync@v1.1
         if: success()
         env:
-          HOST: staging.xsafe.app
+          HOST: connect.xsafe.io
           USER: graffino
           KEY: ${{ secrets.NEW_DEPLOY_SSH_KEY }}
           SSH_ARGS: ' -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
